// Vitest Snapshot v1

exports[`har-to-openapi: Post data > HAR with request with postdata matches snapshot 1`] = `
{
  "domain": "test.loadimpact.com",
  "spec": {
    "info": {
      "title": "HarToOpenApi",
      "version": "1.0.0",
    },
    "openapi": "3.0.0",
    "paths": {
      "/login": {
        "parameters": [],
        "post": {
          "description": "",
          "operationId": "post-login",
          "parameters": [],
          "requestBody": {
            "content": {
              "application/json": {
                "example": {
                  "password": "123",
                  "user": "admin",
                },
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "password": {
                      "format": "integer",
                      "type": "string",
                    },
                    "user": {
                      "type": "string",
                    },
                  },
                  "required": [],
                  "title": "LoginPostRequest",
                  "type": "object",
                },
              },
            },
            "required": true,
          },
          "responses": {},
        },
      },
    },
    "servers": [
      {
        "url": "/",
      },
    ],
  },
  "yamlSpec": "openapi: 3.0.0
info:
  title: HarToOpenApi
  version: 1.0.0
paths:
  /login:
    parameters: []
    post:
      description: ''
      operationId: post-login
      parameters: []
      requestBody:
        content:
          application/json:
            example:
              password: '123'
              user: admin
            schema:
              additionalProperties: false
              properties:
                password:
                  format: integer
                  type: string
                user:
                  type: string
              required: []
              title: LoginPostRequest
              type: object
        required: true
      responses: {}
servers:
  - url: /
",
}
`;

exports[`har-to-openapi: Post data > HAR with request with postdata with a mismatch matches snapshot 1`] = `
{
  "domain": "test.loadimpact.com",
  "spec": {
    "info": {
      "title": "HarToOpenApi",
      "version": "1.0.0",
    },
    "openapi": "3.0.0",
    "paths": {
      "/login": {
        "parameters": [],
        "post": {
          "description": "",
          "operationId": "post-login",
          "parameters": [],
          "requestBody": {
            "content": {
              "application/x-www-form-urlencoded": {
                "schema": {
                  "properties": {
                    "foo0": {
                      "type": "string",
                    },
                    "foo1": {
                      "type": "string",
                    },
                    "foo3": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "foo0",
                    "foo3",
                    "foo1",
                  ],
                  "type": "object",
                },
              },
            },
            "required": true,
          },
          "responses": {},
        },
      },
    },
    "servers": [
      {
        "url": "/",
      },
    ],
  },
  "yamlSpec": "openapi: 3.0.0
info:
  title: HarToOpenApi
  version: 1.0.0
paths:
  /login:
    parameters: []
    post:
      description: ''
      operationId: post-login
      parameters: []
      requestBody:
        content:
          application/x-www-form-urlencoded:
            schema:
              properties:
                foo0:
                  type: string
                foo1:
                  type: string
                foo3:
                  type: string
              required:
                - foo0
                - foo3
                - foo1
              type: object
        required: true
      responses: {}
servers:
  - url: /
",
}
`;
